강사 수정까지 완료

--- a/app/src/main/res/layout/activity_edit_nickname.xml
+++ b/app/src/main/res/layout/activity_edit_nickname.xml
@@ -13,7 +13,7 @@
         android:text="닉네임" />
 
     <EditText
-        android:id="@+id/editNickname"
+        android:id="@+id/edtNickname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="닉네임 자유 입력"
